2010-10-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure: Added STBee Mini support.
	* boards/STBEE_MINI/mcuconf.h: New.
	* boards/STBEE_MINI/board.mk: New.
	* boards/STBEE_MINI/board.h: New.
	* boards/STBEE_MINI/board.c: New.

	* ChibiOS_2.0.2/os/hal/platforms/STM32/hal_lld.c
	(pal_default_config): STBee Mini uses STM32F103CBT6 which expose
	no GPIO E port.

2010-10-21  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/common/hw_config.c (Get_SerialNum): Removed.
	* src/usb_prop.c (gnuk_device_init): Remove calling Get_SerialNum.
	* src/usb_desc.c (gnukStringSerial): Updated.
	* boards/CQ_STARM/board.c (set_led): Fix polarity.

2010-10-20  NIIBE Yutaka  <gniibe@fsij.org>

	* FSIJ_SERIAL_NUMBER: New.
	* src/configure (with_fsij): Added FSIJ serial number support.
	* src/config.h.in (@FSIJ_DEFINE@, @SERIAL_NUMBER_FOUR_BYTES@): New.

	* src/configure: Added CQ STARM target.
	* boards/CQ_STARM/mcuconf.h: New.
	* boards/CQ_STARM/board.mk: New.
	* boards/CQ_STARM/board.h: New.
	* boards/CQ_STARM/board.c: New.

2010-10-19  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/STM32_PRIMER2/board.mk (BOARDSRC): Use common/hw_config.c.
	* boards/OLIMEX_STM32_H103/board.mk (BOARDSRC): Likewise.

	* boards/common/hw_config.c: Move board specific functions to ...
	* boards/STM32_PRIMER2/board.c (USB_Cable_Config, set_led): ... here.
	* boards/OLIMEX_STM32_H103/board.c (USB_Cable_Config, set_led): Ditto.

	* boards/{OLIMEX_STM32_H103,STM32_PRIMER2}/hw_config.c: Removed.
	* boards/common/hw_config.c: New file (was: boards/*/hw_config.c).

	* .gitignore: New file.

2010-10-16  NIIBE Yutaka  <gniibe@fsij.org>

	Implement "INTERNAL AUTHENTICATE" command.

	* src/gnuk.h (BY_USER, BY_RESETCODE, BY_ADMIN): New defines.
	(NUM_ALL_PRV_KEYS): Now it's 3 (was: 2).

	* src/openpgp.c (INS_INTERNAL_AUTHENTICATE): New define.
	(cmd_internal_authenticate): New function.
	(cmds): Added INS_INTERNAL_AUTHENTICATE.
	(cmd_change_password): Use BY_USER.